# libtailscale

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix  go.mod  go.sum  go.work  go.work.sum  mira.h  package-lock.json  package.json  proxy.c  proxy.go  socketpair.c  socketpair_handler.c  socketpair_handler.h  tailscale.c  tailscale.go  tailscale.h  tailscale_test.go  test_express.js
.github/workflows/: ruby.yml  rust.yml  sourcepkg.yml  swift.yml  test.yml
elixir/: .gitignore  CHANGELOG.md  README.md  flake.nix  mix.exs
elixir/examples/: echo.exs
elixir/lib/: libtailscale.ex
elixir/native/: Makefile  libtailscale_nif.c
elixir/priv/: .gitignore
example/: echo_server.c  mira.c
java/: .gitignore  Makefile  NativeUtils.java  Tailscale.java  TailscaleTest.java  build.sh  tailscalejni.c  tailscalejni_test.c
libtestcontrol/: libtestcontrol.h  testcontrol.go
platform/: tailscale_unix.go  tailscale_windows.go
python/: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  pyproject.toml  setup.py
python/examples/: echo.py
python/src/: main.cpp
python/tailscale/: __init__.py  tsnet.py
ruby/: Gemfile  README.md  Rakefile  tailscale.gemspec
ruby/lib/: tailscale.rb
ruby/test/: test_helper.rb
rust/: Cargo.toml  flake.nix
rust/src/: lib.rs
rust/tsnet/: Cargo.toml  build.rs
rust/tsnet-sys/: Cargo.toml  build.rs  wrapper.h
rust/tsnet-sys/src/: lib.rs
rust/tsnet/examples/: echo.rs
rust/tsnet/src/: lib.rs
sourcepkg/: Makefile  Makefile.src  README.md  configure
src/: main.rs
swift/: Makefile  README.md
swift/TailscaleKit/: Listener.swift  (+7 more)
tsnetctest/: tsnetctest.c  tsnetctest.go  tsnetctest.h
tstestcontrol/: Makefile  tstestcontrol.c  tstestcontrol.go  tstestcontrol.h
(+38 files in other folders)
